@@ -204,6 +204,9 @@ Cedric Tessier:
 John Sanders:
 	- iMon driver graphics support
 
+Eric Pooch:
+	- Mac OS X / Darwin support
+
 
 Further developers in the sourceforge lcdproc team:
 Mindaugas Idzelis       aim4min
